--- a/README.zh.html
+++ b/README.zh.html
@@ -474,7 +474,7 @@ pre[data-line] .line-highlight[data-end]:after {
 <p>&#x6839;&#x636E;cid&#x83B7;&#x53D6;&#x5C5E;&#x6027;&#x3002;</p>
 <hr>
 <p><strong>&#x5B9E;&#x4F8B;&#xFF1A;</strong><br>
-<a href="https://pubchem.ncbi.nlm.nih.gov/rest/pug/compound/cid/1,2,3,4,5/property/MolecularFormula,MolecularWeight,InChIKey/JSON">https://pubchem.ncbi.nlm.nih.gov/rest/pug/compound/cid/1,2,3,4,5/property/MolecularFormula,MolecularWeight,InChIKey/JSON</a></p>
+<a href="https://pubchem.ncbi.nlm.nih.gov/rest/pug/compound/cid/1,2,3,4,5/property/MolecularFormula,MolecularWeight/JSON">https://pubchem.ncbi.nlm.nih.gov/rest/pug/compound/cid/1,2,3,4,5/property/MolecularFormula,MolecularWeight/JSON</a></p>
 <h1 class="mume-header" id="%E5%90%8C%E4%B9%89%E8%AF%8Dapi">&#x540C;&#x4E49;&#x8BCD;API</h1>
 
 <p>&#x6839;&#x636E;cid&#x83B7;&#x53D6;&#x540C;&#x4E49;&#x8BCD;&#x3002;</p>
